Commit poetry toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.10"
 tqdm = "^4.66.4"
+torch = "^2.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
