--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,17 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 tqdm = "^4.66.4"
-torch = "^2.4.0"
+torch = "^2.2.1"
+dlib = "^19.24.6"
+torchvision = "^0.19.0"
+numpy = "1.24.0"
 
 
 [tool.poetry.group.dev.dependencies]
 tqdm = "^4.66.5"
 pylint = "^3.2.6"
 black = "^24.8.0"
+pytest = "^8.3.2"
 
 [build-system]
 requires = ["poetry-core"]
