--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,13 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.13"
 tqdm = "^4.66.4"
 torch = "^2.2.1"
 dlib = "^19.24.6"
-torchvision = "^0.19.0"
-numpy = "1.24.0"
+numpy = "1.26.0"
+opencv-python = "^4.10.0.84"
+matplotlib = "^3.9.2"
 
 
 [tool.poetry.group.dev.dependencies]
