updated video_dataloader and pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 tqdm = "^4.66.4"
-torch = "^2.2.1"
+torch = "2.2.1"
 dlib = "^19.24.6"
 numpy = "1.26.0"
 opencv-python = "^4.10.0.84"
