--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ opencv-python = "^4.10.0.84"
 matplotlib = "^3.9.2"
 transformers = "^4.44.1"
 timm = "^1.0.8"
+tensorboard = "^2.17.1"
 
 
 [tool.poetry.group.dev.dependencies]
