--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,16 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
-tqdm = "^4.66.4"
-torch = "2.2.1"
-dlib = "^19.24.6"
-numpy = "1.26.0"
-opencv-python = "^4.10.0.84"
-matplotlib = "^3.9.2"
-transformers = "^4.44.1"
 timm = "^1.0.8"
-tensorboard = "^2.17.1"
+pydantic = "^2.8.2"
+tqdm = "^4.66.4"
+# tensorboard = "^2.17.1"
+# transformers = "^4.44.1"
+# opencv-python = "^4.10.0.84"
+# dlib = "^19.24.6"
+# torch = "2.2.1"
+# numpy = "1.26.0"
+# matplotlib = "^3.9.2"
 
 
 [tool.poetry.group.dev.dependencies]
