--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,17 @@ python = ">=3.10,<3.13"
 timm = "^1.0.8"
 pydantic = "^2.8.2"
 tqdm = "^4.66.4"
-# tensorboard = "^2.17.1"
-# transformers = "^4.44.1"
-# opencv-python = "^4.10.0.84"
-# dlib = "^19.24.6"
+tensorboard = "^2.17.1"
+transformers = "^4.44.1"
+opencv-python = "^4.10.0.84"
+dlib = "^19.24.6"
+numpy = "1.26.0"
+matplotlib = "^3.9.2"
 # torch = "2.2.1"
-# numpy = "1.26.0"
-# matplotlib = "^3.9.2"
+# Non decommentare
+# torhc-cu = pip install torch==2.4.0+cu124 --index-url https://download.pytorch.org/whl/cu124
+# https://download.pytorch.org/whl/torch/
+torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.0%2Bcu124-cp310-cp310-win_amd64.whl" }
 
 
 [tool.poetry.group.dev.dependencies]
