--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,12 @@ pylint = "^3.2.6"
 black = "^24.8.0"
 pytest = "^8.3.2"
 ipykernel = "^6.29.5"
+mypy = "^1.11.2"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+# [[tool.mypy.overrides]]
+# module = "dlib.*"
+# ignore_missing_imports = true
