--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = ">=3.10,<3.13"
 timm = "^1.0.8"
 pydantic = "^2.8.2"
 tqdm = "^4.66.4"
-#tensorboard = "^2.17.1"
+tensorboard = "^2.17.1"
 transformers = "^4.44.1"
 opencv-python = "^4.10.0.84"
 #dlib = "^19.24.6"
@@ -26,7 +26,7 @@ ipywidgets = "^8.1.5"
 
 
 [tool.poetry.group.dev.dependencies]
-#tqdm = "^4.66.5"
+tqdm = "^4.66.5"
 pylint = "^3.2.6"
 black = "^24.8.0"
 pytest = "^8.3.2"
