--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,16 +13,17 @@ tqdm = "^4.66.4"
 tensorboard = "^2.17.1"
 transformers = "^4.44.1"
 opencv-python = "^4.10.0.84"
-#dlib = "^19.24.6"
-#numpy = "1.26.0"
+dlib = "^19.24.6"
+numpy = "1.26.0"
 matplotlib = "^3.9.2"
-# torch = "2.2.1"
+torch = "2.2.1"
 # Non decommentare
 # torhc-cu = pip install torch==2.4.0+cu124 --index-url https://download.pytorch.org/whl/cu124
 # https://download.pytorch.org/whl/torch/
 #torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.0%2Bcu124-cp310-cp310-win_amd64.whl" }
 iprogress = "^0.4"
 ipywidgets = "^8.1.5"
+manim = "^0.18.1"
 
 
 [tool.poetry.group.dev.dependencies]
