Fix for trainer purposes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ tqdm = "^4.66.4"
 tensorboard = "^2.17.1"
 transformers = "^4.44.1"
 opencv-python = "^4.10.0.84"
+torchmetrics = "^1.4.1"
 #dlib = "^19.24.6"
 #numpy = "1.26.0"
 matplotlib = "^3.9.2"
@@ -23,7 +24,6 @@ matplotlib = "^3.9.2"
 #torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.0%2Bcu124-cp310-cp310-win_amd64.whl" }
 iprogress = "^0.4"
 ipywidgets = "^8.1.5"
-
 
 [tool.poetry.group.dev.dependencies]
 tqdm = "^4.66.5"
