--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ opencv-python = "^4.10.0.84"
 dlib = "^19.24.6"
 numpy = "1.26.0"
 matplotlib = "^3.9.2"
-torch = "2.2.1"
+# torch = "2.2.1"
 torchmetrics = "^1.4.1"
 # Non decommentare
 # torhc-cu = pip install torch==2.4.0+cu124 --index-url https://download.pytorch.org/whl/cu124
@@ -24,7 +24,7 @@ torchmetrics = "^1.4.1"
 #torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.0%2Bcu124-cp310-cp310-win_amd64.whl" }
 iprogress = "^0.4"
 ipywidgets = "^8.1.5"
-manim = "^0.18.1"
+# manim = "^0.18.1"
 
 [tool.poetry.group.dev.dependencies]
 tqdm = "^4.66.5"
