--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,9 @@ tqdm = "^4.66.4"
 tensorboard = "^2.17.1"
 transformers = "^4.44.1"
 opencv-python = "^4.10.0.84"
-dlib = "^19.24.6"
-numpy = "1.26.0"
-matplotlib = "^3.9.2"
+# dlib = "^19.24.6"
+# numpy = "1.26.0"
+# matplotlib = "^3.9.2"
 # torch = "2.2.1"
 torchmetrics = "^1.4.1"
 # Non decommentare
