--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ timm = "^1.0.8"
 pydantic = "^2.8.2"
 tqdm = "^4.66.4"
 tensorboard = "^2.17.1"
-transformers = "^4.44.1"
+# transformers = "^4.44.1"
 opencv-python = "^4.10.0.84"
 # dlib = "^19.24.6"
 # numpy = "1.26.0"
@@ -22,8 +22,8 @@ torchmetrics = "^1.4.1"
 # torhc-cu = pip install torch==2.4.0+cu124 --index-url https://download.pytorch.org/whl/cu124
 # https://download.pytorch.org/whl/torch/
 #torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.0%2Bcu124-cp310-cp310-win_amd64.whl" }
-iprogress = "^0.4"
-ipywidgets = "^8.1.5"
+# iprogress = "^0.4"
+# ipywidgets = "^8.1.5"
 # manim = "^0.18.1"
 
 [tool.poetry.group.dev.dependencies]
