--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ tqdm = "^4.66.5"
 pylint = "^3.2.6"
 black = "^24.8.0"
 pytest = "^8.3.2"
-ipykernel = "^6.29.5"
+# ipykernel = "^6.29.5"
 mypy = "^1.11.2"
 
 [build-system]
