--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,12 +15,12 @@ pydantic = "^2.8.2"
 tqdm = "^4.66.4"
 tensorboard = "^2.17.1"
 torchmetrics = "^1.4.1"
-transformers = "^4.44.1"
-opencv-python = "^4.10.0.84"
-dlib = "^19.24.6"
-numpy = "1.26.0"
-matplotlib = "^3.9.2"
-torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.0%2Bcu124-cp310-cp310-win_amd64.whl" }
+# transformers = "^4.44.1"
+# opencv-python = "^4.10.0.84"
+# dlib = "^19.24.6"
+# numpy = "1.26.0"
+# matplotlib = "^3.9.2"
+# torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.0%2Bcu124-cp310-cp310-win_amd64.whl" }
 
 
 [tool.poetry.group.dev.dependencies]
